--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="res/css/styles.css" type="text/css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel='stylesheet' type='text/css' />
-  <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="res/js/prefixfree.min.js"></script>
@@ -23,6 +23,7 @@
   <header>
     <form action="https://www.google.com/search" method="get"><input id="input-search" type="text" autocomplete="off" name="q" placeholder="Google-Search" autofocus></form>
     <div class="search-suggestions"></div>
+
   </header>
 
   <main>
@@ -84,7 +85,7 @@
                 </ul>
               </div>
 
-            
+
             <div class="link-box" id="box-5">
               <div class="headline">
                 <h2>ETC</h2></div>
@@ -97,7 +98,7 @@
               </div>
 
             </div>
-            <div class = "photoframe">
+            <!-- <div class = "photoframe">
             <img src="res/img/AddamsBoard.jpg" alt="" class = "bottomPicture">
             <img src="res/img/AddamsStage.jpg" alt="" class = "bottomPicture">
             <br>
@@ -106,7 +107,7 @@
             <br>
             <img src="res/img/BellsBoard.jpg" alt="" class = "bottomPicture">
             <img src="res/img/BellsStage.jpg" alt="" class = "bottomPicture">
-</div>  
+</div>   -->
             <!-- <div class="second-container">
               <div id="weather-clock-container">
                 <div id="clock-container">
