--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="res/css/styles.css" type="text/css" />
-
+  <link rel="shortcut icon" href="res/img/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel='stylesheet' type='text/css' />
   <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 
